--- a/hw2/stud/main.ipynb
+++ b/hw2/stud/main.ipynb
@@ -2,15 +2,133 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/francesco/miniconda3/envs/NLP/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"./\")\n",
+    "sys.path.append(\"./hw2/stud/\")\n",
+    "import torch\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torch.nn.utils.rnn import pad_sequence\n",
+    "import config\n",
+    "from tqdm.auto import tqdm\n",
+    "import numpy as np\n",
+    "from utils import *\n",
+    "from load import *\n",
+    "from model import ESC\n",
+    "# import pytorch_lightning as pl\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/gdrive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(config.DEVICE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed_everything(config.SEED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/francesco/Desktop/University/MNLP/nlp2023-hw2/hw2/stud\n",
+      "/home/francesco/Desktop/University/MNLP/nlp2023-hw2/hw2/stud\n",
+      "/home/francesco/Desktop/University/MNLP/nlp2023-hw2/hw2/stud\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "train_dataset = CoarseGrainedDataset(config.COARSE_TRAIN_DATA)\n",
+    "val_dataset = CoarseGrainedDataset(config.COARSE_VAL_DATA)\n",
+    "test_dataset = CoarseGrainedDataset(config.COARSE_TEST_DATA)\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=config.BATCH_SIZE, shuffle=True, collate_fn=collate_fn)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=config.BATCH_SIZE, shuffle=False, collate_fn=collate_fn)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=config.BATCH_SIZE, shuffle=False, collate_fn=collate_fn)\n",
+    "\n",
+    "mapping = load_map(config.MAP_PATH)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# model\n",
+    "model = ESC()\n",
+    "\n",
+    "# Optimizer\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "# Loss\n",
+    "criterion = torch.nn.CrossEntropyLoss()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "NLP",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
