--- a/hw2/stud/main.ipynb
+++ b/hw2/stud/main.ipynb
@@ -353,6 +353,30 @@
     "\n",
     "out = model(torch.tensor([input_ids]), torch.tensor([input_mask]), torch.tensor([segment_ids]))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.seq_relationship.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.seq_relationship.bias', 'cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.decoder.weight']\n",
+      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import BertConfig, BertModel\n",
+    "\n",
+    "config = BertConfig.from_pretrained(\"bert-base-uncased\", num_labels=2, type_vocab_size=2)\n",
+    "\n",
+    "#print config\n",
+    "bert = BertModel.from_pretrained(\"bert-base-uncased\", config=config)"
+   ]
   }
  ],
  "metadata": {
